overlays/full-security/calico/patch-calico-felix-defaultendpointtohostaction.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: calico-node
  namespace: calico-system
spec:
  template:
    spec:
      containers:
        - name: calico-node
